hphp/hack/test/typecheck/case_type/recursive/subtyping_simple4b.php.exp
ERROR: File "subtyping_simple4b.php", line 4, characters 11-11:
Cyclic type definition (Typing[4014])
  File "subtyping_simple4b.php", line 4, characters 20-20:
  Cyclic use is here
ERROR: File "subtyping_simple4b.php", line 28, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_simple4b.php", line 8, characters 29-34:
  Expected `vec<A>`
  File "subtyping_simple4b.php", line 4, characters 20-20:
  But got `mixed`. Using `mixed` instead of A because this is an illegal recursive use of A in the definition of A
  File "subtyping_simple4b.php", line 4, characters 20-20:
    by the definition of `A`. Using `mixed` instead of A because this is an illegal recursive use of A in the definition of A
